// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage should render 404 1`] = `
<div>
  <div
    class="MuiBox-root css-19703gc"
  >
    <h1
      class="MuiTypography-root MuiTypography-h1 css-sbeosn-MuiTypography-root"
    >
      404
    </h1>
    <p
      class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
    >
      Not Found
    </p>
    <div
      class="MuiBox-root css-mro3c9"
      role="button"
    >
      <a
        class="link"
        data-discover="true"
        href="/"
      >
        goHome
      </a>
    </div>
  </div>
</div>
`;

exports[`ErrorPage should render 500 1`] = `
<div>
  <div
    class="MuiBox-root css-19703gc"
  >
    <h1
      class="MuiTypography-root MuiTypography-h1 css-sbeosn-MuiTypography-root"
    >
      Oops
    </h1>
    <div
      class="MuiBox-root css-mro3c9"
      role="button"
    >
      <a
        class="link"
        data-discover="true"
        href="/"
      >
        goHome
      </a>
    </div>
  </div>
</div>
`;
